<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".InfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="140dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dancing_script_bold"
            android:text="@string/teacher"
            android:textAlignment="center"
            android:textColor="#982A08"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:fontFamily="@font/dancing_script_bold"
                android:text="@string/Teacher"
                android:textAlignment="center"
                android:textSize="34sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:fontFamily="@font/dancing_script_bold"
            android:lineSpacingExtra="34sp"
            android:text="@string/auther"
            android:textAlignment="center"
            android:textColor="#A83434"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:fontFamily="@font/dancing_script_bold"
                android:text="@string/name"
                android:textSize="34sp" />

            <Space
                android:layout_width="31dp"
                android:layout_height="61dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="212dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:fontFamily="@font/dancing_script_bold"
                android:text="@string/myName"
                android:textSize="34sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="21dp"
                android:layout_height="47dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/dancing_script_bold"
                android:text="@string/Class"
                android:textAlignment="viewStart"
                android:textSize="34sp" />

            <Space
                android:layout_width="99dp"
                android:layout_height="47dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="231dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/dancing_script_bold"
                android:text="@string/myClass"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:fontFamily="@font/dancing_script_bold"
                android:text="@string/mssv"
                android:textSize="34sp" />

            <Space
                android:layout_width="31dp"
                android:layout_height="61dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:fontFamily="@font/dancing_script_bold"
                android:text="@string/myMSSV"
                android:textAlignment="center"
                android:textSize="34sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>