<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/menuButton"
        android:name="com.example.predict_age.CameraFragment"
        tools:layout="@layout/fragment_camera" />

    <LinearLayout
        android:id="@+id/menuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:elevation="10dp"
        android:gravity="center"
        android:background="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false">

        <!-- HOME -->
        <LinearLayout
            android:id="@+id/homeLayout"
            android:background="@drawable/round_back_home_100"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/icon_select_home"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/homeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/home"
                android:textColor="#00838F"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- CAMERA -->
        <LinearLayout
            android:id="@+id/cameraLayout"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/cameraImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_camera"
                android:importantForAccessibility="no" />
            <TextView
                android:id="@+id/cameraText"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textColor="@color/camera"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>

        <!-- IMAGE -->
        <LinearLayout
            android:id="@+id/imageLayout"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_image"
                android:importantForAccessibility="no" />
            <TextView
                android:id="@+id/imageText"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:textColor="@color/image"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>

        <!-- INFO -->
        <LinearLayout
            android:id="@+id/infoLayout"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/infoImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_info"
                android:importantForAccessibility="no" />
            <TextView
                android:id="@+id/infoText"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/info"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
